# HELIOS

./: LICENSE  README.md  SPECIFICATIONS.md  pyproject.toml
.github/: copilot-instructions.md
agent-logs/: 2025.11.25-01_copilot-instructions.md  2025.11.25-02_raccourcis-imports.md  2025.11.25-03_reorganisation-demo-notebook.md  2025.11.25-04_plot-sed-alpha-fix.md  2025.11.25-05_chromatic-atmosphere-frozen-flow.md  2025.11.25-06_documentation-api.md  2025.11.25-07_architecture-diagram.md  2025.11.29-01_interferometer-animation.md  2025.11.29-02_autodoc-venv-rebuild.md  2025.11.29-02_collector-class-refactoring.md  2025.11.29-02_fix-interferometer-plot-reorg-demo.md  2025.11.29-03_complete-module-decomposition.md  2025.11.29-03_make-bat-venv-fix.md  2025.11.29-04_docstring-warnings-fixed.md  2025.11.29-04_rename-collectors-to-telescope.md  2025.11.29-05_unify-telescope-classes.md  2025.11.29-06_update-documentation-uml.md  2025.11.29-07_telescope-array-presets.md  2025.11.29-08_flux-at-method-celestial-objects.md  2025.11.29-09_planet-reflected-light.md  2025.11.30-01_uml-diagram-generation.md  2025.11.30-02_uml-icons-and-numbering.md  2025.11.30-03_uml-names-and-sublayer-indexing.md  2025.11.30-04_fix-index-overlap.md  2025.11.30-05_layer-element-architecture-refactoring.md  2025.11.30-06_phase1-validation.md  2025.11.30-07_phase2-complete-migration.md  2025.11.30-08_parent-references-and-description.md  2025.11.30-09_full-description-feature.md
docs/: conf.py  contribute.md  index.md  make.bat  requirements.txt  uml_diagrams.md
examples/: demo.ipynb  (+3 more)
(+69 files in other folders)
