[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helios"
version = "0.1.0"
description = "Hierarchical End-to-end Lightpath & Instrumental response Simulation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Vincent Foriel", email = "vincent.foriel@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy",
  "astropy",
  "scipy",
  "matplotlib",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "myst-parser", "nbsphinx", "sphinx-breeze-theme"]
dev = ["black", "isort", "flake8", "mypy"]



[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
